# newsletter

./: Cargo.toml  Dockerfile  spec.yml
.do/: app.yml
.github/workflows/: general.yml
.sqlx/: query-1015e3117e9acd29318618f2739479e289af089c3c17d5eb7ef6697edd0a0398.json  query-3d4629040e4c1f009458354009ba5bc274e7a76e332e1abd4b0ffd03d92e7229.json  query-543c718f502c3e5c1bb2ed58409f89896a4f6d7a782a3c1875977ec8e24bbd2a.json  query-7db4130c8f33a6cb431a74ada0e7b7399708d7b7aa4084c96861c77222ee7415.json  query-a26640c0942c62084b9ef20ef2b84fe96f023ae1bb99e0bc9475903e03042b14.json  query-bc8c19d99b913b9e470dc192d6260da47a416d9d33571af90785d5f6f609add2.json
config/: base.yml  production.yml
migrations/: 20240226074432_make_status_not_null_in_subscriptions.sql  20240226135631_create_subscription_tokens_table.sql  20240315051113_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  config.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
