[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { verison = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
