[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web = "4"
actix-web-lab = "0.20"
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1"
unicode-segmentation = "1"
urlencoding = "2"
validator = "0.16"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
rand = { version = "0.8", features = ["std_rng"] }

[dev-dependencies]
once_cell = "1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"
serde_urlencoded = "0.7"

[patch.crates-io]
config = { git = "https://github.com/mehcode/config-rs.git" }
